--- a/templates/about.html
+++ b/templates/about.html
@@ -1,43 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <div class="container">
     <div class="jumbotron">
         <h1>Jethro Kambere</h1>
     </div>
-    <div class='row'>
-        <div class="column-1">
-            <img class="img-rounded" src="/static/rando.jpg" alt="">
+        <div class="Tamim">
+            <div class="column-1">
+                <img class="img-rounded" src="/static/rando.jpg" alt="">
+            </div>
+        
+            <div class="column-2">
+                <h2>Jethro Kambere</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero! <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero! <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero! <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero! <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
+                    consectetur quidem pariatur ad libero!</p>
+            </div>
         </div>
-    
-        <div class="column-2">
-            <h2>Jethro Kambere</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui, facilis sunt? Ea, dolorum quod. Temporibus itaque sint iste quae voluptates minima ex neque ea blanditiis, 
-                consectetur quidem pariatur ad libero!</p>
-        </div>
+        <div class="Tamim2">
         <h3><strong>Areas of Expertise</strong></h3>
         <div class="expertise">
             <ul>
@@ -47,25 +42,100 @@
                 <li>Lorem ipsum dolor sit amet consectetur</li>
             </ul>
         </div>
-    </div>
+        </div>
     </div>
 <style>
-    .jumbotron{
-        text-align: center;
+    .container{
+        margin-top: 20px;
+        height: 45rem;
+        width: 80%;
+    }
+    .column-1{
+        float: left;
+        width: 30%;
+        height: 100%;
     }
 
-    .expertise ul{
-        list-style-type: none;
+    .column-1 > img {
+        transform: scaleY(1.45);
+        transform: scaleX(1.1);
+        height: 100%;
     }
 
-    @media screen and (max-width: 768px){
-        .col-xs-6{
-            text-align: center;
+    .column-2{
+        float: left;
+        width: 70%;
+        padding: 10px;
+    }
+
+    .Tamim {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .Tamim2 {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .expertise{
+        margin-left: 30px;
+    }
+    /* .img-rounded{
+        width: 100%;
+        max-height: 100%;
+    } */
+
+    @media only screen and (max-width: 600px){
+        .container{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: stretch;
+            align-content: stretch;
         }
-    }
-        
-    .col-xs-6 > h2, p {
-        margin-left:-250px ;
+        .header{
+            order: 0;
+            flex-grow: 1;
+            flex-shrink: 1;
+        }
+        .img-rounded{
+            width: 100%;
+            max-height: 100%;
+            order: 0;
+            flex-grow: 1;
+            flex-shrink: 1;
+        }
+        .column-1{
+            float: left;
+            width: 30%;
+            padding: 10px;
+            flex-grow: 1;
+        }
+        .column-2{
+            float: left;
+            width: 70%;
+            padding: 10px;
+            flex-grow: 1;
+        }
+        .expertise{
+            margin-left: 30px;
+            order: 0;
+            flex-grow: 1;
+            flex-shrink: 1;
+        }
+        .img-rounded{
+            /* width: 100%;
+            max-height: 100%; */
+            flex-grow: 1;
+        }
     }
 </style>
 {% endblock %}
